--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.0"
+    "mongoose": "^6.3.0",
+    "morgan": "^1.10.0"
   }
 }
